--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>about my page</h1>
-    <a href="index.html">about Us</a>
+    <a href="from.html">about Us</a>
 </body>
 </html>
