--- a/index.html
+++ b/index.html
@@ -6,6 +6,56 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My form</h1>
+    
+        <table>
+            <tr><td>User ID :</td><td><input type="text" name="UID"</td></tr>
+    <tr><td>Password :</td><td><input type="text" name="pwd"</td></tr>
+    <tr><td>Confirm password :</td><td><input type="text" name="cpwd"</td></tr>
+    <tr><td>Security Question :</td><td>    
+        <select name="Occupation">
+        <option name="">What is your pet name</option>
+                                                <option name="">Tom</option>
+                                                <option name="">Jarry</option>
+                                                <option name="">Jack</option>
+                                                <tr><td>Security Answer :</td><td><input type="text" name="Security"</td></tr>
+                                                <tr><td>Preferred Language :</td><td><input type="text" name="Lang"</td></tr>
+                                                <tr><td>Personal Details</td></tr>
+                                                <tr><td> First Name:</td><td><input type="text" name="fname"Placeholder="Enter your first name" size=""></td></tr>
+                                                <tr><td> Middle Name:</td><td><input type="text" name="mname"Placeholder="Enter your middle name" size=""></td></tr>
+                                                <tr><td> Last Name:</td><td><input type="text" name="lname"Placeholder="Enter your last name" size=""></td></tr>
+                                                <tr><td> Gender :</td><td><input type="radio" name="Gender" size="">Male<input type="radio" name="Gender" size="7">Female</td></tr>
+                                                <tr><td> Gender :</td><td><input type="radio" name="Marrital Status" size="7">Married<input type="radio" name="married" size="7">Unmarried</td></tr>
+                                                <tr><td> Date of Birth :</td><td><input type="date" name="date" size="7"</td></tr>
+                                                <tr><td> Occupation :</td><td>    <select name="Occupation">
+                                                        <option name="">---public---</option>
+                                                <option name="">Student</option>
+                                                <option name="">Govt.job</option>
+                                                <option name="">Private.job</option>
+                                                <tr><td> Aadhaar Card No:</td><td><input type="text" name="type" size="7"></td></tr>
+                                                <tr><td> PAN Card No:</td><td><input type="text" name="type" size="7"></td></tr>
+                                                <tr><td> Email:</td><td><input type="email" name="date" size="7"></td></tr>
+                                                <tr><td> Mobile No:</td><td><input type="text" name="number" size="7"></td></tr>
+                                                <tr><td> Nationality :</td><td>    <select name="Nationality">
+                                                        <option name="">---INDIAN---</option>
+                                                <option name="">Indian</option>
+                                                <option name=""></option>
+                                                <option name=""></option>
+                                                <tr><td>Residential Address</td></tr>
+                                                <tr><td> Flat/Door/Block No:</td><td><input type="text" name="span" size="7"></td></tr>
+                                                <tr><td> Street Name:</td><td><input type="text" name="road" size="7"></td></tr>
+                                                <tr><td> Area/Locality :</td><td><input type="text" name="zone" size="7"></td></tr>
+                                                <tr><td> Country :</td><td><select name="Country">
+                                                <option name="">---SELECT---</option>
+                                                <option name="">India</option>
+                                                <option name="">Bangladesh</option>
+                                                <option name="">Pakistan</option>
+                                                <tr><td> Pin Code :</td><td><input type="text" name="type" size="7"></td></tr>
+                                                <tr><td> State :</td><td><input type="text" name="type" size="7"></td></tr>
+                                                <tr><td> City/Town :</td><td><input type="text" name="type" size="7"></td></tr>
+                                                <tr><td> Post Office :</td><td><input type="text" name="type" size="7"></td></tr>
+                                                <tr><td> Phone No:</td><td><input type="text" name="type" size="7"></td></tr>
+                                                <tr><td> Copy Residence to office Address :</td><td><input type="radio" name="Address" size="7">Yes<input type="radio" name="Address" size="7">No</td></tr>
+                                            </td></tr>
+                                            </table>
 </body>
 </html>
